# backtrader

./: .gitignore  pyproject.toml
backtrader/: feed.py
backtrader/feeds/: __init__.py  ibdata.py  stockcsv.py
backtrader/indicators/: vpi.py
backtrader/stores/ibstores/: connection.py  contract.py  tempCodeRunnerFile.py  ticker.py  wrapper.py
